kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dockerecho-deployment
  labels:
    app: dockerecho
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dockerecho
  template:
    metadata:
      labels:
        app: dockerecho
    spec:
      containers:
        - name: dockerecho
          image: shaplovdv/dockerecho
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              port: 8000
              path: /health
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 2
          readinessProbe:
            httpGet:
              port: 8000
              path: /health
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 2
