kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dockerecho-service
spec:
  type: ClusterIP
  selector:
    app: dockerecho
  ports:
    - protocol: TCP
      port: 81
      targetPort: 8000
